# tauri_demo

./: package-lock.json  package.json  vite.config.ts
.github/workflows/: tauri-windows.yml
src/: App.vue  main.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AddQuery.vue
